--- a/views/test.ejs
+++ b/views/test.ejs
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="/users.css">
 </head>
 
-<form action="/users" method="post">
+<form action="/test" method="post">
     <div>
         <label for="name">Name:</label>
         <input type="text" name="name" />
